--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "isotope-layout": "^3.0.6",
+    "lucide-react": "^0.474.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
